--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -144,12 +144,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/3ec67a3711202dab695
 </p><p>L'icona di  <b> Macro_Connect_And_Sweep</b> per personalizzare la barra degli strumenti: <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep.png&amp;filetimestamp=20160607100845&amp;.html" class="mw-file-description" title="Icon for the button"><img alt="Icon for the button" src="../File/Macro_Connect_And_Sweep.png" decoding="async" width="65" height="64" class="mw-file-element" data-file-width="65" data-file-height="64"></a></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Script_2">Script</span></h2>
-<p><b> Macro_Connect_And_Sweep.FCMacro</b>
-</p>
-</div> 
-<p>Scaricare la macro da Gits <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/3ec67a3711202dab69592ce53b938924"><b> Macro_Connect_And_Sweep.FCMacro</b></a>
+<p><b> Macro_Connect_And_Sweep.FCMacro</b> 
+</p><p>Scaricare la macro da Gits <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/3ec67a3711202dab69592ce53b938924"><b> Macro_Connect_And_Sweep.FCMacro</b></a>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Example">Example</span></h2>
@@ -271,13 +267,13 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165237
+Cached time: 20260123165243
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.172 seconds
-Preprocessor visited node count: 377/1000000
+CPU time usage: 0.144 seconds
+Real time usage: 0.620 seconds
+Preprocessor visited node count: 373/1000000
 Post&#8208;expand include size: 13506/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 6/100
@@ -287,16 +283,16 @@ Unstrip post&#8208;expand size: 9714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   55.161      1 -total
-  9.44%    5.208      1 Template:Macro/it
-  4.18%    2.304     13 Template:Caption
-  4.16%    2.292      1 Template:ColoredText
-  3.65%    2.016      6 Template:Clear
-  3.42%    1.885      1 Template:Codeextralink
-  2.21%    1.219      1 Template:KEY
+100.00%  236.788      1 -total
+  5.77%   13.673      1 Template:Macro/it
+  3.47%    8.214      6 Template:Clear
+  3.32%    7.862      1 Template:KEY
+  3.08%    7.293      1 Template:Codeextralink
+  3.02%    7.147     13 Template:Caption
+  2.42%    5.730      1 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165236 and revision id 1743050. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165243 and revision id 1743052. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
