--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Connect_And_Sweep.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Verbinden und Austragen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Connect_And_Sweep.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Connect And Sweep (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Connect_And_Sweep.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Connect And Sweep (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Connect_And_Sweep.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Po&#322;&#261;cz i wyci&#261;gnij (2% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_Connect_And_Sweep.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089; &#1057;&#1086;&#1077;&#1076;&#1080;&#1085;&#1080;&#1090;&#1100; &#1080; &#1055;&#1086;&#1058;&#1088;&#1072;&#1077;&#1082;&#1090;&#1086;&#1088;&#1080;&#1080; (Connect And Sweep) (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -146,11 +146,10 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/3ec67a3711202dab695
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p><b> Macro_Connect_And_Sweep.FCMacro</b> 
 </p><p>Scaricare la macro da Gits <a rel="nofollow" class="external text" href="https://gist.github.com/mario52a/3ec67a3711202dab69592ce53b938924"><b> Macro_Connect_And_Sweep.FCMacro</b></a>
+</p><p><span id="Example"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Example">Example</span></h2>
-</div>
 <h2><span class="mw-headline" id="Esempio">Esempio</span></h2>
+<h2><span class="mw-headline" id="Esempio_2">Esempio</span></h2>
 <p>Creare un percorso e una tubazione con la  Macro Connect And Sweep e la <a rel="nofollow" class="external text" href="http://www.freecad.org/wiki/index.php?title=Macro_Repro_Wire/it">Macro Replica</a> <span typeof="mw:File"><a href="../index.php?title=Macro_ReproWire.png&amp;filetimestamp=20151022084758&amp;.html" class="mw-file-description"><img src="../File/Macro_ReproWire.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
 <center>
@@ -255,11 +254,10 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 </p><p>00.02 13/06/2016&nbsp;: add options choice angle path rectangle and ellipse
 </p><p>00.01 07/06/2016&nbsp;: add option solid or not centring rectangle or not
 </p><p>00.00 05/06/2016&nbsp;:
+</p><p><span id="Links"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
+<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>La discussione <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=22&amp;t=15833">Scripting point to point tubing</a> nel forum di FreeCAD.
 </p><p>Questa macro si basa sul codice di microelly2, vedere  <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?t=7029#p56746">Looking for some helpful GUI-commands</a>
 </p><p>Altra discussione sul foro <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=22&amp;t=35432">Macro_Connect_And_Sweep</a>
@@ -267,32 +265,32 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165243
+Cached time: 20260123165249
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.144 seconds
-Real time usage: 0.620 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.115 seconds
 Preprocessor visited node count: 373/1000000
 Post&#8208;expand include size: 13506/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 9714/5000000 bytes
+Unstrip post&#8208;expand size: 9718/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  236.788      1 -total
-  5.77%   13.673      1 Template:Macro/it
-  3.47%    8.214      6 Template:Clear
-  3.32%    7.862      1 Template:KEY
-  3.08%    7.293      1 Template:Codeextralink
-  3.02%    7.147     13 Template:Caption
-  2.42%    5.730      1 Template:ColoredText
+100.00%   43.643      1 -total
+  9.50%    4.144      1 Template:Macro/it
+  5.55%    2.420     13 Template:Caption
+  3.34%    1.458      1 Template:Codeextralink
+  3.22%    1.407      1 Template:ColoredText
+  3.16%    1.381      6 Template:Clear
+  2.62%    1.144      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165243 and revision id 1743052. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165249 and revision id 1743056. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
