--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -97,7 +97,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_link.png_White_upwards_curved_arrow"></span>
 </p>
 <h3><span id=".D0.91.D1.8F.D0.BB.D0.B0_.D0.B8.D0.B7.D0.B2.D0.B8.D1.82.D0.B0_.D0.BD.D0.B0.D0.B3.D0.BE.D1.80.D0.B5_.D1.81.D1.82.D1.80.D0.B5.D0.BB.D0.BA.D0.B0"></span><span class="mw-headline" id="&#1041;&#1103;&#1083;&#1072;_&#1080;&#1079;&#1074;&#1080;&#1090;&#1072;_&#1085;&#1072;&#1075;&#1086;&#1088;&#1077;_&#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1041;&#1103;&#1083;&#1072; &#1080;&#1079;&#1074;&#1080;&#1090;&#1072; &#1085;&#1072;&#1075;&#1086;&#1088;&#1077; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;</span></h3>
-<p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object.
+<p>&#1058;&#1086;&#1074;&#1072; &#1086;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072; &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085; (<a href="../Std_LinkMake.html" title="Std LinkMake">linked</a>) &#1086;&#1073;&#1077;&#1082;&#1090;.
 </p>
 <h3><span class="mw-headline" id="Two_white_upwards_curved_arrows"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Two white upwards curved arrows</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object loaded from an external document.
@@ -173,12 +173,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123164828
+Cached time: 20260123165259
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.171 seconds
-Real time usage: 0.748 seconds
+CPU time usage: 0.142 seconds
+Real time usage: 0.455 seconds
 Preprocessor visited node count: 760/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  216.567      1 -total
- 21.80%   47.204      1 Template:Std_Base_navi/bg
- 16.90%   36.594      1 Template:Interface_navi/bg
- 16.42%   35.565      2 Template:PropertyData
- 14.04%   30.400      1 Template:FALSE
- 14.01%   30.335      3 Template:Variable
- 11.14%   24.125      3 Template:Navigation_menu_2
-  8.91%   19.287      1 Template:Userdocnavi/bg
-  4.59%    9.951      1 Template:PropertyView
-  3.19%    6.899     19 Template:KEY
+100.00%   88.657      1 -total
+ 19.46%   17.254      1 Template:Std_Base_navi/bg
+ 18.60%   16.492      3 Template:Navigation_menu_2
+ 18.14%   16.080      1 Template:Interface_navi/bg
+ 13.46%   11.936      1 Template:Userdocnavi/bg
+ 12.63%   11.196      1 Template:PropertyView
+  6.55%    5.808      5 Template:Version
+  6.23%    5.519      2 Template:PropertyData
+  6.09%    5.403      1 Template:FALSE
+  5.88%    5.210      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123164828 and revision id 1741787. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123165258 and revision id 1743058. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
