--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -98,8 +98,9 @@
 </p>
 <h3><span id=".D0.91.D1.8F.D0.BB.D0.B0_.D0.B8.D0.B7.D0.B2.D0.B8.D1.82.D0.B0_.D0.BD.D0.B0.D0.B3.D0.BE.D1.80.D0.B5_.D1.81.D1.82.D1.80.D0.B5.D0.BB.D0.BA.D0.B0"></span><span class="mw-headline" id="&#1041;&#1103;&#1083;&#1072;_&#1080;&#1079;&#1074;&#1080;&#1090;&#1072;_&#1085;&#1072;&#1075;&#1086;&#1088;&#1077;_&#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link.png&amp;filetimestamp=20241010072353&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1041;&#1103;&#1083;&#1072; &#1080;&#1079;&#1074;&#1080;&#1090;&#1072; &#1085;&#1072;&#1075;&#1086;&#1088;&#1077; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;</span></h3>
 <p>&#1058;&#1086;&#1074;&#1072; &#1086;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072; &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085; (<a href="../Std_LinkMake.html" title="Std LinkMake">linked</a>) &#1086;&#1073;&#1077;&#1082;&#1090;.
+</p><p><span id="File:FreeCAD_Tree_view_link_external.png_Two_white_upwards_curved_arrows"></span>
 </p>
-<h3><span class="mw-headline" id="Two_white_upwards_curved_arrows"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Two white upwards curved arrows</span></h3>
+<h3><span id=".D0.94.D0.B2.D0.B5_.D0.B1.D0.B5.D0.BB.D0.B8_.D0.B8.D0.B7.D0.B2.D0.B8.D1.82.D0.B8_.D0.BD.D0.B0.D0.B3.D0.BE.D1.80.D0.B5_.D1.81.D1.82.D1.80.D0.B5.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1044;&#1074;&#1077;_&#1073;&#1077;&#1083;&#1080;_&#1080;&#1079;&#1074;&#1080;&#1090;&#1080;_&#1085;&#1072;&#1075;&#1086;&#1088;&#1077;_&#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1080;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1044;&#1074;&#1077; &#1073;&#1077;&#1083;&#1080; &#1080;&#1079;&#1074;&#1080;&#1090;&#1080; &#1085;&#1072;&#1075;&#1086;&#1088;&#1077; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1080;</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object loaded from an external document.
 </p>
 <h3><span class="mw-headline" id="Eye_symbol"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Eye symbol</span></h3>
@@ -173,13 +174,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165259
+Cached time: 20260123165354
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.142 seconds
-Real time usage: 0.455 seconds
-Preprocessor visited node count: 760/1000000
+CPU time usage: 0.179 seconds
+Real time usage: 0.438 seconds
+Preprocessor visited node count: 761/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -189,19 +190,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   88.657      1 -total
- 19.46%   17.254      1 Template:Std_Base_navi/bg
- 18.60%   16.492      3 Template:Navigation_menu_2
- 18.14%   16.080      1 Template:Interface_navi/bg
- 13.46%   11.936      1 Template:Userdocnavi/bg
- 12.63%   11.196      1 Template:PropertyView
-  6.55%    5.808      5 Template:Version
-  6.23%    5.519      2 Template:PropertyData
-  6.09%    5.403      1 Template:FALSE
-  5.88%    5.210      6 Template:MenuCommand
+100.00%   88.355      1 -total
+ 20.60%   18.198      1 Template:Userdocnavi/bg
+ 17.46%   15.424      1 Template:Std_Base_navi/bg
+ 15.35%   13.566      3 Template:Navigation_menu_2
+ 15.13%   13.368      1 Template:Interface_navi/bg
+  9.11%    8.049      2 Template:PropertyData
+  6.69%    5.910      6 Template:MenuCommand
+  5.66%    4.997      1 Template:FALSE
+  5.35%    4.730     19 Template:KEY
+  4.63%    4.090      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123165258 and revision id 1743058. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123165354 and revision id 1743060. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
