--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -101,7 +101,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_link_external.png_Two_white_upwards_curved_arrows"></span>
 </p>
 <h3><span id=".D0.94.D0.B2.D0.B5_.D0.B1.D0.B5.D0.BB.D0.B8_.D0.B8.D0.B7.D0.B2.D0.B8.D1.82.D0.B8_.D0.BD.D0.B0.D0.B3.D0.BE.D1.80.D0.B5_.D1.81.D1.82.D1.80.D0.B5.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1044;&#1074;&#1077;_&#1073;&#1077;&#1083;&#1080;_&#1080;&#1079;&#1074;&#1080;&#1090;&#1080;_&#1085;&#1072;&#1075;&#1086;&#1088;&#1077;_&#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1080;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1044;&#1074;&#1077; &#1073;&#1077;&#1083;&#1080; &#1080;&#1079;&#1074;&#1080;&#1090;&#1080; &#1085;&#1072;&#1075;&#1086;&#1088;&#1077; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1080;</span></h3>
-<p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> object loaded from an external document.
+<p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> &#1086;&#1073;&#1077;&#1082;&#1090;, &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085; &#1086;&#1090; &#1074;&#1098;&#1085;&#1096;&#1077;&#1085; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;.
 </p>
 <h3><span class="mw-headline" id="Eye_symbol"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Eye symbol</span></h3>
 <p>This indicates that the object will be hidden in the Tree View if the <b>Show Items Hidden in Tree View</b> context menu option of objects or the document is unchecked. Objects that have their <span style="font-size:60%; padding-right:0.8em;">&#1042;&#1080;&#1076;</span><b>Show In Tree</b> property set to <code>false</code> are affected. This property can be changed in the <a href="../Property_View.html" title="Property View">Property View</a> or with the <b>Toggle Visibility in Tree View</b> context menu option of objects.
@@ -174,12 +174,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165354
+Cached time: 20260123165431
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.179 seconds
-Real time usage: 0.438 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.504 seconds
 Preprocessor visited node count: 761/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -190,19 +190,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   88.355      1 -total
- 20.60%   18.198      1 Template:Userdocnavi/bg
- 17.46%   15.424      1 Template:Std_Base_navi/bg
- 15.35%   13.566      3 Template:Navigation_menu_2
- 15.13%   13.368      1 Template:Interface_navi/bg
-  9.11%    8.049      2 Template:PropertyData
-  6.69%    5.910      6 Template:MenuCommand
-  5.66%    4.997      1 Template:FALSE
-  5.35%    4.730     19 Template:KEY
-  4.63%    4.090      3 Template:Variable
+100.00%   88.488      1 -total
+ 37.12%   32.850      1 Template:Std_Base_navi/bg
+ 32.09%   28.399      3 Template:Navigation_menu_2
+ 18.09%   16.006      1 Template:Interface_navi/bg
+ 14.25%   12.609      1 Template:Userdocnavi/bg
+  8.36%    7.397      2 Template:PropertyData
+  3.37%    2.982      6 Template:MenuCommand
+  3.24%    2.865      3 Template:Variable
+  3.06%    2.708      1 Template:TOCright
+  2.88%    2.546     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123165354 and revision id 1743060. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123165431 and revision id 1743062. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
