--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -16,7 +16,7 @@ Collega con Sweep
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description"><span style="background-color:#ff0000; color:#ffffff;">La nuova GUI della nuova versione modificata per lo HD dpi (QGridLayout) esegue solo FC versione 0.18 e successive.</span> <br> <br>  Questa macro crea facilmente una connessione tra due oggetti, un oggetto e un punto o tra due punti (il centro degli oggetti sono i punti iniziale e finale dello sweep) possono essere selezionati da un cerchio poligonale di ellisse configurabile.<br>&Egrave; disponibile una funzione di discretizzazione per creare punti marker configurabili per il taglio di linee in sezione o il taglio con una quota sul punto viene creato per tutte le coordinate. <br> Una funzione di faccia o filo duplicata da utilizzare con l'operazione Sweep e Loft.<br>Operazione Sweep e Loft direttamente con la macro.<br>Centraggio sulla faccia<br><br>Versione macro: 0.13<br>Ultima modifica: 2024-07-21<br>Versione FreeCAD: 0.18 e pi&ugrave;<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/c/c9/Macro_Connect_And_Sweep.png">ToolBar Icon</a><br>Autore: Mario52<br>
+<td class="ctEven left macro-description"><span style="background-color:#ff0000; color:#ffffff;">La nuova GUI per la nuova versione modificata per HD dpi (QGridLayout) funziona solo su FC versione 0.18 e successive.</span> <br> <br>  Questa macro crea facilmente una connessione tra due oggetti, un oggetto e un punto o tra due punti (il centro degli oggetti sono i punti iniziale e finale dello sweep) possono essere selezionati da un cerchio poligonale di ellisse configurabile.<br>&Egrave; disponibile una funzione di discretizzazione per creare punti marker configurabili per il taglio di linee in sezione o il taglio con una quota sul punto viene creato per tutte le coordinate. <br> Una funzione di faccia o filo duplicata da utilizzare con l'operazione Sweep e Loft.<br>Operazione Sweep e Loft direttamente con la macro.<br>Centraggio sulla faccia<br><br>Versione macro: 0.13<br>Ultima modifica: 2024-07-21<br>Versione FreeCAD: 0.18 e pi&ugrave;<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/c/c9/Macro_Connect_And_Sweep.png">ToolBar Icon</a><br>Autore: Mario52<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -265,15 +265,15 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165249
+Cached time: 20260123165519
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.115 seconds
+CPU time usage: 0.136 seconds
+Real time usage: 0.391 seconds
 Preprocessor visited node count: 373/1000000
-Post&#8208;expand include size: 13506/2097152 bytes
-Template argument size: 3072/2097152 bytes
+Post&#8208;expand include size: 13515/2097152 bytes
+Template argument size: 3081/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -281,16 +281,16 @@ Unstrip post&#8208;expand size: 9718/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.643      1 -total
-  9.50%    4.144      1 Template:Macro/it
-  5.55%    2.420     13 Template:Caption
-  3.34%    1.458      1 Template:Codeextralink
-  3.22%    1.407      1 Template:ColoredText
-  3.16%    1.381      6 Template:Clear
-  2.62%    1.144      1 Template:KEY
+100.00%  163.279      1 -total
+ 11.56%   18.876      1 Template:Macro/it
+  5.25%    8.569      1 Template:ColoredText
+  3.59%    5.866     13 Template:Caption
+  3.59%    5.859      1 Template:Codeextralink
+  2.65%    4.327      1 Template:KEY
+  0.84%    1.378      6 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165249 and revision id 1743056. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165519 and revision id 1743064. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
