--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -102,8 +102,9 @@
 </p>
 <h3><span id=".D0.94.D0.B2.D0.B5_.D0.B1.D0.B5.D0.BB.D0.B8_.D0.B8.D0.B7.D0.B2.D0.B8.D1.82.D0.B8_.D0.BD.D0.B0.D0.B3.D0.BE.D1.80.D0.B5_.D1.81.D1.82.D1.80.D0.B5.D0.BB.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1044;&#1074;&#1077;_&#1073;&#1077;&#1083;&#1080;_&#1080;&#1079;&#1074;&#1080;&#1090;&#1080;_&#1085;&#1072;&#1075;&#1086;&#1088;&#1077;_&#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1080;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_link_external.png&amp;filetimestamp=20241010072419&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_link_external.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1044;&#1074;&#1077; &#1073;&#1077;&#1083;&#1080; &#1080;&#1079;&#1074;&#1080;&#1090;&#1080; &#1085;&#1072;&#1075;&#1086;&#1088;&#1077; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1080;</span></h3>
 <p>This indicates a <a href="../Std_LinkMake.html" title="Std LinkMake">linked</a> &#1086;&#1073;&#1077;&#1082;&#1090;, &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085; &#1086;&#1090; &#1074;&#1098;&#1085;&#1096;&#1077;&#1085; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;.
+</p><p><span id="File:FreeCAD_Tree_view_hidden.png_Eye_symbol"></span>
 </p>
-<h3><span class="mw-headline" id="Eye_symbol"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Eye symbol</span></h3>
+<h3><span id=".D0.A1.D0.B8.D0.BC.D0.B2.D0.BE.D0.BB_.D0.BE.D0.BA.D0.BE"></span><span class="mw-headline" id="&#1057;&#1080;&#1084;&#1074;&#1086;&#1083;_&#1086;&#1082;&#1086;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1057;&#1080;&#1084;&#1074;&#1086;&#1083; &#1086;&#1082;&#1086;</span></h3>
 <p>This indicates that the object will be hidden in the Tree View if the <b>Show Items Hidden in Tree View</b> context menu option of objects or the document is unchecked. Objects that have their <span style="font-size:60%; padding-right:0.8em;">&#1042;&#1080;&#1076;</span><b>Show In Tree</b> property set to <code>false</code> are affected. This property can be changed in the <a href="../Property_View.html" title="Property View">Property View</a> or with the <b>Toggle Visibility in Tree View</b> context menu option of objects.
 </p>
 <h3><span class="mw-headline" id="Cyan_ice_crystal"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Cyan ice crystal</span></h3>
@@ -174,13 +175,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165431
+Cached time: 20260123165533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.132 seconds
-Real time usage: 0.504 seconds
-Preprocessor visited node count: 761/1000000
+CPU time usage: 0.166 seconds
+Real time usage: 0.899 seconds
+Preprocessor visited node count: 762/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -190,19 +191,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   88.488      1 -total
- 37.12%   32.850      1 Template:Std_Base_navi/bg
- 32.09%   28.399      3 Template:Navigation_menu_2
- 18.09%   16.006      1 Template:Interface_navi/bg
- 14.25%   12.609      1 Template:Userdocnavi/bg
-  8.36%    7.397      2 Template:PropertyData
-  3.37%    2.982      6 Template:MenuCommand
-  3.24%    2.865      3 Template:Variable
-  3.06%    2.708      1 Template:TOCright
-  2.88%    2.546     19 Template:KEY
+100.00%  164.841      1 -total
+ 21.16%   34.874      1 Template:Std_Base_navi/bg
+ 15.24%   25.116      1 Template:PropertyView
+ 14.68%   24.202      2 Template:PropertyData
+ 14.62%   24.096      3 Template:Navigation_menu_2
+  8.24%   13.582      1 Template:Interface_navi/bg
+  8.08%   13.324      1 Template:FALSE
+  7.46%   12.298     19 Template:KEY
+  6.69%   11.021      1 Template:Userdocnavi/bg
+  4.94%    8.139      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123165431 and revision id 1743062. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123165532 and revision id 1743066. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
