--- a/wiki/it/Macro_PCBWay.html
+++ b/wiki/it/Macro_PCBWay.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro PCBWay (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_PCBWay.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro PCBWay (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro PCBWay (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: PCBWay (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -117,10 +117,9 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Utility/pcbway.FCMacro">https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Utility/pcbway.FCMacro</a>"&gt;raw code&lt;/a&gt;</div>
 <p><br>
+<span id="Usage"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Open or create a FreeCAD document containing an object you wish to manufacture with PCBWay.</li>
 <li>Select the object you wish to manufacture. If no object is selected but there is only one visible object on screen, that object will be sent.</li>
@@ -130,9 +129,9 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <li>Next times, the PCBWay macro will be under menu <b>Macro &rarr; Recent macros</b>.</li>
 <li>Your object will be packed in the STEP format for shapes or the OBJ format for meshes, and sent to PCBWay. A browser window will then open for you to fill out additional details and place an order for your product.</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Code">Code</span></h2>
-</div>
+<p><span id="Code"></span>
+</p>
+<h2><span class="mw-headline" id="Codice">Codice</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The latest version of the macro is to be found at <a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/Utility/pcbway.FCMacro">https://github.com/FreeCAD/FreeCAD-macros/blob/master/Utility/pcbway.FCMacro</a>
 </p>
@@ -305,12 +304,12 @@ def main():
     #        QtGui.QMessageBox.Yes</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123165613
+Cached time: 20260123165629
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.196 seconds
+CPU time usage: 0.038 seconds
+Real time usage: 0.075 seconds
 Preprocessor visited node count: 128/1000000
 Post&#8208;expand include size: 2924/2097152 bytes
 Template argument size: 7617/2097152 bytes
@@ -321,15 +320,15 @@ Unstrip post&#8208;expand size: 8798/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.634      1 -total
- 24.30%    8.174      1 Template:MacroCode
- 19.37%    6.516      1 Template:Macro
- 18.16%    6.107      1 Template:Codeextralink
- 14.56%    4.897      2 Template:MenuCommand
- 13.62%    4.580      1 Template:Button
+100.00%   14.816      1 -total
+ 26.94%    3.991      1 Template:MacroCode
+ 22.91%    3.394      1 Template:Codeextralink
+ 22.68%    3.360      1 Template:Macro
+ 16.08%    2.383      2 Template:MenuCommand
+  8.48%    1.257      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260123165613 and revision id 1743068. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260123165629 and revision id 1743072. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
